--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@
   width: auto;
 }
 .site .header {
-  height: 600px;
+  position: relative;
+  height: 770px;
   background-image: url("./455904.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 .site .header .navbar {
-  height: 100px;
+  width: 100%;
+  height: 12%;
+  position: fixed;
   background-color: rgba(31, 32, 53, 0.514);
   padding-right: 100px;
   padding-left: 50px;
@@ -36,7 +39,74 @@
   color: white;
 }
 .site .header .navbar img {
-  width: 200px;
+  width: 150px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.site .header .header__content {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.541);
+  text-align: center;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  color: white;
+}
+.site .header .header__content h1 {
+  font-size: 50px;
+  font-family: Georgia;
+}
+.site .header .header__content p {
+  width: 450px;
+}
+.site .header .header__content button {
+  width: 150px;
+  height: 40px;
+  margin-top: 20px;
+  border: 2px solid white;
+  color: white;
+  background: none;
+  font-size: 18px;
+}
+.site .header .header__footer {
+  width: 100%;
+  padding: 20px;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(20, 137, 247, 0.558);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.site .header .header__footer .box {
+  color: white;
+  display: flex;
+  gap: 20px;
+}
+.site .header .header__footer .box:nth-child(2) {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.site .header .header__footer .box i {
+  color: black;
+  text-align: center;
+  line-height: 40px;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border-radius: 50%;
+}
+.site .header .header__footer .box .mini__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 5px;
 }/*# sourceMappingURL=style.css.map */
