--- a/style.scss
+++ b/style.scss
@@ -2,25 +2,38 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+}
+
+@mixin forFlex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .site {
     width: auto;
+
     .header {
-        height: 600px;
+        position: relative;
+        height: 770px;
         background-image: url("./455904.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
 
         .navbar {
-            height: 100px;
+            width: 100%;
+            height: 12%;
+            position: fixed;
             background-color: rgba(31, 32, 53, 0.514);
             padding-right: 100px;
             padding-left: 50px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+
 
             ul {
                 list-style: none;
@@ -37,8 +50,82 @@
             }
 
             img {
-                width: 200px;
+                width: 150px;
                 object-fit: cover;
+            }
+        }
+
+
+        .header__content {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.541);
+            text-align: center;
+            margin: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+            color: white;
+
+            h1 {
+                font-size: 50px;
+                font-family: Georgia;
+            }
+
+            p {
+                width: 450px;
+            }
+
+            button {
+                width: 150px;
+                height: 40px;
+                margin-top: 20px;
+                border: 2px solid white;
+                color: white;
+                background: none;
+                font-size: 18px;
+            }
+        }
+
+
+        .header__footer {
+            width: 100%;
+            padding: 20px;            
+            position: absolute;
+            bottom: 0;
+            background-color: rgba(20, 137, 247, 0.558);
+            @include forFlex();
+            gap: 20px;
+            flex-wrap: wrap;
+
+            .box {
+                color: white;
+                display: flex;
+                gap: 20px;
+
+                &:nth-child(2){
+                    margin-left: 50px;
+                    margin-right: 50px;
+                }
+                i {
+                    color: black;
+                    text-align: center;
+                    line-height: 40px;
+                    width: 40px;
+                    height: 40px;
+                    background-color: white;
+                    border-radius: 50%;
+                }
+
+                .mini__box {
+                    @include forFlex();
+                    align-items: start;
+                    flex-direction: column;
+                    gap: 5px;
+
+                }
             }
         }
     }
