--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,38 @@
 .site {
     width: auto;
 
+    .navbar {
+        width: 100%;
+        padding: 20px;
+        position: fixed;
+        background-color: rgba(31, 32, 53, 0.514);
+        padding-right: 100px;
+        padding-left: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1;
+
+         ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 30px;
+
+            a {
+                font-size: 20px;
+                text-decoration: none;
+                color: white;
+            }
+        }
+
+        img {
+            width: 150px;
+            object-fit: cover;
+        }
+    }
+
     .header {
         position: relative;
         height: 770px;
@@ -23,37 +55,7 @@
         background-size: cover;
         background-position: center;
 
-        .navbar {
-            width: 100%;
-            height: 12%;
-            position: fixed;
-            background-color: rgba(31, 32, 53, 0.514);
-            padding-right: 100px;
-            padding-left: 50px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
 
-
-            ul {
-                list-style: none;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 30px;
-
-                a {
-                    font-size: 20px;
-                    text-decoration: none;
-                    color: white;
-                }
-            }
-
-            img {
-                width: 150px;
-                object-fit: cover;
-            }
-        }
 
 
         .header__content {
@@ -92,7 +94,7 @@
 
         .header__footer {
             width: 100%;
-            padding: 20px;            
+            padding: 20px;
             position: absolute;
             bottom: 0;
             background-color: rgba(20, 137, 247, 0.558);
@@ -105,10 +107,11 @@
                 display: flex;
                 gap: 20px;
 
-                &:nth-child(2){
+                &:nth-child(2) {
                     margin-left: 50px;
                     margin-right: 50px;
                 }
+
                 i {
                     color: black;
                     text-align: center;
@@ -129,4 +132,36 @@
             }
         }
     }
+    .banner{
+        width: 100%;
+        height: 600px;
+        padding: 50px;
+        text-align: center;
+
+        .banner__content{
+            width: 100%;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+
+            .banner__content__main{    
+                width: 70%;      
+                text-align: justify;     
+               
+                h2,h3{
+                }
+                
+            }
+            img{
+                width: 200px;
+                height: 300px;
+                object-fit: cover;
+            }
+        }
+    }
+
+
+
+
 }
