--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@
         align-items: center;
         z-index: 1;
 
-         ul {
+        ul {
             list-style: none;
             display: flex;
             justify-content: center;
@@ -38,6 +38,11 @@
                 font-size: 20px;
                 text-decoration: none;
                 color: white;
+            }
+
+            li :hover {
+                color: blue;
+                transition: all 1.5s;
             }
         }
 
@@ -132,28 +137,30 @@
             }
         }
     }
-    .banner{
+
+    .banner {
         width: 100%;
         height: 600px;
         padding: 50px;
         text-align: center;
 
-        .banner__content{
+        .banner__content {
             width: 100%;
             padding: 20px;
             display: flex;
             justify-content: center;
             gap: 20px;
 
-            .banner__content__main{    
-                width: 70%;      
-                text-align: justify;     
-               
-                h2,h3{
-                }
-                
+            .banner__content__main {
+                width: 70%;
+                text-align: justify;
+
+                h2,
+                // h3 {}
+
             }
-            img{
+
+            img {
                 width: 200px;
                 height: 300px;
                 object-fit: cover;
