--- a/style.css
+++ b/style.css
@@ -117,24 +117,76 @@
 }
 .site .banner {
   width: 100%;
-  height: 600px;
   padding: 50px;
   text-align: center;
+  font-size: 30px;
 }
 .site .banner .banner__content {
   width: 100%;
   padding: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 20px;
 }
 .site .banner .banner__content .banner__content__main {
   width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   text-align: justify;
+  align-items: center;
 }
-.site .banner .banner__content img {
-  width: 200px;
-  height: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
+.site .banner .banner__content .banner__content__main h2,
+.site .banner .banner__content .banner__content__main h3 {
+  font-size: 30px;
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  margin-top: 20px;
+}
+.site .banner .banner__content .banner__content__main h3 {
+  margin-bottom: 20px;
+}
+.site .banner .banner__content .banner__content__main .p {
+  width: 90%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.site .banner .banner__content .banner__content__main .p p {
+  border: none;
+}
+.site .banner .banner__content .banner__content__main .p span {
+  color: rgb(41, 111, 240);
+}
+.site .banner .banner__content .banner__content__main p {
+  color: rgb(92, 88, 88);
+  border-left: 5px solid blue;
+  padding-left: 10px;
+  font-size: 20px;
+  font-family: cursive;
+}
+.site .banner .banner__content button {
+  font-size: 20px;
+  padding: 8px 12px;
+  margin-top: 20px;
+  border: none;
+  background-color: rgb(29, 103, 239);
+  color: white;
+}
+.site .across {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./bg.png);
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 50px;
+  padding: 70px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.site .across .across__box .across__mini {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
