--- a/style.scss
+++ b/style.scss
@@ -140,33 +140,101 @@
 
     .banner {
         width: 100%;
-        height: 600px;
         padding: 50px;
         text-align: center;
+        font-size: 30px;
 
         .banner__content {
             width: 100%;
             padding: 20px;
             display: flex;
             justify-content: center;
+            align-items: center;
             gap: 20px;
+
+
 
             .banner__content__main {
                 width: 70%;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
                 text-align: justify;
+                align-items: center;
 
+                h2,
+                h3 {
+                    font-size: 30px;
+                    text-align: center;
+                    font-family: Georgia, 'Times New Roman', Times, serif;
+                    margin-top: 20px;
+                }
 
+                h3 {
+                    margin-bottom: 20px;
+                }
 
+                .p {
+                    width: 90%;
+
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+
+                    p {
+
+                        border: none;
+                    }
+
+                    span {
+                        color: rgb(41, 111, 240);
+                    }
+                }
+
+                p {
+                    color: rgb(92, 88, 88);
+                    border-left: 5px solid blue;
+                    padding-left: 10px;
+                    font-size: 20px;
+                    font-family: cursive;
+                }
             }
 
-            img {
-                width: 200px;
-                height: 300px;
-                object-fit: cover;
+
+            button {
+                font-size: 20px;
+                padding: 8px 12px;
+                margin-top: 20px;
+                border: none;
+                background-color: rgb(29, 103, 239);
+                color: white;
+
             }
         }
     }
 
+    .across {
+
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./bg.png);
+        background-position: center;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-top: 50px;
+        padding: 70px 0;
+        @include forFlex();
+
+
+        .across__box {
+
+
+
+            .across__mini {
+                @include forFlex();
+
+            }
+
+        }
+    }
 
 
 
